# water-forecast-web

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.lock.yml  environment.yml  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
web/: eslint.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
web/src/: App.tsx  main.tsx
